# dbconvert

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  createrelease.sh  main.py  pyproject.toml  requirements.txt
converters/: mysql_converter.py  postgres_converter.py
dbconvert/: cli.py  gui.py
dbconvert/converters/: base_converter.py  converter_factory.py  mysql_converter.py  postgres_converter.py
dbconvert/core/: enums.py  loggingsetup.py  metadata.py  utils.py
dbconvert/gui/: app.py
dbconvert/writers/: sqlite_writer.py
